- basic navbar setup - angular js setup

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,12 +1,21 @@
 // Variables
 @import "variables";
-
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-
 /* ----------------------------------------------------------------- */
 /* GLOBAL */
 /* ----------------------------------------------------------------- */
+/* ----------------------------------------------------------------- */
+/* NAV */
+/* ----------------------------------------------------------------- */
+.navBar {
+  background: black;
+  height: 150px;
+  text-align: center;
+  font-size: 50px;
+  color: white;
+  padding-top: 30px;
+}
 
 body {
   // background: blue;
