--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -28,17 +28,121 @@ body {
 }
 .player-info {
   position: absolute;
+  max-width: 70px;
 }
 .player-box {
   position: relative;
+  background: #1f1f1f;
+  border-radius: 1em;
 }
-
+.info-title {
+  color: #8a8a8a;
+  font-size: 12px;
+}
+.info-content {
+  font-size: 12px;
+}
 .player-img {
   width: 250px;
+  position: relative;
+  z-index: 2;
 }
 .team-logo {
-  width: 200px;
+  width: 150px;
   position: absolute;
   right: 0;
-  z-index: -1;
+  top: 50px;
+  z-index: 1;
+}
+
+/* ----------------------------------------------------------------- */
+/* ONLINE PULSE */
+/* ----------------------------------------------------------------- */
+
+.online-light {
+  margin-top: 20px;
+  margin-left: 30px;
+  position: absolute;
+  bottom: 30px;
+  right: 38px;
+  background: #45453f;
+}
+
+.pulse {
+  width: 10px;
+  height: 10px;
+  border: 5px solid #3ada64;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+  background-color: #716f42;
+  z-index: 10;
+  position: absolute;
+}
+
+.dot {
+  border: 10px solid #3ada64;
+  background: transparent;
+  -webkit-border-radius: 60px;
+  -moz-border-radius: 60px;
+  border-radius: 60px;
+  height: 50px;
+  width: 50px;
+  -webkit-animation: pulse 3s ease-out;
+  -moz-animation: pulse 3s ease-out;
+  animation: pulse 3s ease-out;
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  z-index: 1;
+  opacity: 0;
+}
+
+@-moz-keyframes pulse {
+ 0% {
+    -moz-transform: scale(0);
+    opacity: 0.0;
+ }
+ 25% {
+    -moz-transform: scale(0);
+    opacity: 0.1;
+ }
+ 50% {
+    -moz-transform: scale(0.1);
+    opacity: 0.3;
+ }
+ 75% {
+    -moz-transform: scale(0.5);
+    opacity: 0.5;
+ }
+ 100% {
+    -moz-transform: scale(1);
+    opacity: 0.0;
+ }
+}
+
+@-webkit-keyframes "pulse" {
+ 0% {
+    -webkit-transform: scale(0);
+    opacity: 0.0;
+ }
+ 25% {
+    -webkit-transform: scale(0);
+    opacity: 0.1;
+ }
+ 50% {
+    -webkit-transform: scale(0.1);
+    opacity: 0.3;
+ }
+ 75% {
+    -webkit-transform: scale(0.5);
+    opacity: 0.5;
+ }
+ 100% {
+    -webkit-transform: scale(1);
+    opacity: 0.0;
+ }
 }
