--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -25,6 +25,9 @@ body {
 .player-name {
   font-size: 3em;
   margin-bottom: 0;
+  font-family: 'Merriweather Sans', sans-serif;
+  margin-top: 5px;
+  letter-spacing: 3px;
 }
 .player-info {
   position: absolute;
@@ -32,7 +35,7 @@ body {
 }
 .player-box {
   position: relative;
-  background: #1f1f1f;
+  background: #383838;
   border-radius: 1em;
 }
 .info-title {
