--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -37,6 +37,7 @@ body {
   position: relative;
   background: #383838;
   border-radius: 1em;
+  margin: 1em;
 }
 .info-title {
   color: #8a8a8a;
@@ -104,7 +105,7 @@ body {
   opacity: 0;
 }
 
-@-moz-keyframes pulse {
+@-moz-keyframes "pulse" {
  0% {
     -moz-transform: scale(0);
     opacity: 0.0;
