uppercase for player name

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -28,6 +28,7 @@ body {
   font-family: 'Merriweather Sans', sans-serif;
   margin-top: 5px;
   letter-spacing: 3px;
+  text-transform: uppercase;
 }
 .player-info {
   position: absolute;
