--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7709,6 +7709,7 @@ body {
 }
 
 .info-title {
+  margin-top: 0;
   color: #8a8a8a;
   font-size: 1.6em;
 }
@@ -7718,11 +7719,11 @@ body {
   margin: 0 auto;
   content: " ";
   height: 10px;
-  width: 200px;
+  width: 250px;
 }
 
 .player-img {
-  width: 200px;
+  width: 250px;
   position: absolute;
   bottom: 0;
   z-index: 2;
@@ -7732,7 +7733,7 @@ body {
 .team-logo {
   width: 150px;
   position: absolute;
-  right: 0;
+  right: 5px;
   top: 50px;
   z-index: 1;
 }
