filter search bar now centered and width sized correctly

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7695,6 +7695,17 @@ body {
 }
 
 /* ----------------------------------------------------------------- */
+/* FILTER */
+/* ----------------------------------------------------------------- */
+.search-container {
+  float: none;
+}
+
+.search-box {
+  width: 100%;
+}
+
+/* ----------------------------------------------------------------- */
 /* PLAYER */
 /* ----------------------------------------------------------------- */
 .player-name {
