--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -31,6 +31,15 @@ body {
     margin-bottom: 0;
 }
 /* ----------------------------------------------------------------- */
+/* FILTER */
+/* ----------------------------------------------------------------- */
+.search-container {
+    float: none;
+}
+.search-box {
+    width: 100%;
+}
+/* ----------------------------------------------------------------- */
 /* PLAYER */
 /* ----------------------------------------------------------------- */
 .player-name {
