added text shadow to slogan

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7690,6 +7690,10 @@ body {
 /* ----------------------------------------------------------------- */
 /* FILTER */
 /* ----------------------------------------------------------------- */
+.slogan {
+  text-shadow: 2px 2px #6441A5;
+}
+
 .search-container {
   padding: 3em;
   float: none;
