--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -27,6 +27,9 @@ body {
 /* ----------------------------------------------------------------- */
 /* FILTER */
 /* ----------------------------------------------------------------- */
+.slogan {
+    text-shadow: 2px 2px #6441A5;
+}
 .search-container {
     padding: 3em;
     float: none;
