--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -43,7 +43,7 @@ body {
 .filter-section {
     background: url('/img/nalcs_summer_finals2017c.jpg');
     background-position: center;
-    height: 300px;
+    padding: 0 1em 3em 1em;
     width: 100%;
 }
 .filter-select-container {
@@ -95,10 +95,10 @@ select {
     margin: 0 auto;
     content: " ";
     height: 10px;
-    width: 200px;
+    width: 180px;
 }
 .player-img {
-    max-width: 250px;
+    max-width: 200px;
     max-height: 180px;
     position: absolute;
     bottom: 0;
