--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,11 +4,17 @@
 /* ----------------------------------------------------------------- */
 /* GLOBAL */
 /* ----------------------------------------------------------------- */
-body {
+h1, h2, h3, h4, h5, h6, input, select, .navbar-brand {
     font-family: 'Teko', sans-serif;
     font-weight: 400;
+}
+body {
     background: black;
     color: white;
+}
+.navbar {
+    border: none;
+    border-radius: 0;
 }
 /* ----------------------------------------------------------------- */
 /* NAV */
@@ -37,6 +43,7 @@ body {
 .search-box {
     color: black;
     width: 100%;
+    padding: 3px;
 }
 .select-container {
     margin-top: 2em;
@@ -115,6 +122,25 @@ select {
     z-index: 1;
 }
 
+/* ----------------------------------------------------------------- */
+/* ABOUT */
+/* ----------------------------------------------------------------- */
+.about-header {
+    margin-top: 0;
+    background: url('/img/nalcs_summer_finals2017_about.jpg');
+    background-position: center;
+    padding: 1em 1em;
+    width: 100%;
+    font-size: 4em;
+}
+.social-media {
+    list-style-type: none;
+    padding-left: 0;
+}
+.social-media li {
+    float: left;
+    padding: 1em;
+}
 /* ----------------------------------------------------------------- */
 /* ONLINE PULSE */
 /* ----------------------------------------------------------------- */
