minified css, add border to player-box

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -108,6 +108,7 @@ select {
 }
 .player-box {
     position: relative;
+    border: 3px solid #1f1f1f;
     // background: #383838;
     // url('https://i.pinimg.com/originals/d6/aa/40/d6aa404338a0dc32e8f65b6a80a8aa46.jpg')
     border-radius: 1em;
