added team colors to player-box, various CSS updates

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,3 +1,45 @@
+// Team Colors
+
+// TSM
+$tsm-primary: #4a4a4a;
+$tsm-secondary: white;
+
+// Echo Fox
+$fox-primary: #de6e26;
+$fox-secondary: white;
+
+// Fly Quest
+$fly-primary: #14532b;
+$fly-secondary: #d69f28;
+
+// Counter Logic Gaming
+$clg-primary: #272727;
+$clg-secondary: #007fff;
+
+// Cloud 9
+$c9-primary: white;
+$c9-secondary: #0b93d7;
+
+// Optic Gaming
+$opt-primary: #9dc73a;
+$opt-secondary: #151515;
+
+// 100 Thieves
+$t100-primary: black;
+$t100-secondary: #D51721;
+
+// Golden Guardians
+$ggs-primary: #003399;
+$ggs-secondary: #fec624;
+
+// Clutch Gaming
+$cg-primary: white;
+$cg-secondary: #dd1832;
+
+// Team Liquid
+$tl-primary: white;
+$tl-secondary: #0e2340;
+
 
 // Body
 $body-bg: #f5f8fa;
@@ -16,7 +58,7 @@ $brand-success: #2ab27b;
 $brand-warning: #cbb956;
 $brand-danger: #bf5329;
 
-$twitch-color: #6441A5;
+$twitch-color: #A990DA;
 
 // Typography
 $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
