make F.A.Q. text bold

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,10 @@ h1, h2, h3, h4, h5, h6, input, select, .navbar-brand {
     font-family: 'Teko', sans-serif;
     font-weight: 400;
 }
+.teko {
+    font-family: 'Teko', sans-serif;
+    font-weight: 400;
+}
 body {
     background: black;
     color: white;
@@ -46,6 +50,9 @@ a {
 // }
 .navbar {
     margin-bottom: 0;
+}
+.nav-link {
+    font-size: 1.5em;
 }
 /* ----------------------------------------------------------------- */
 /* FILTER */
