navbar is longer

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -45,7 +45,9 @@ a {
 //   padding-top: 30px;
 // }
 .navbar {
+    height: 80px;
     margin-bottom: 0;
+    border-bottom: 2px solid $seafoam;
 }
 .nav-link {
     font-size: 1.5em;
