--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -58,6 +58,8 @@ $brand-success: #2ab27b;
 $brand-warning: #cbb956;
 $brand-danger: #bf5329;
 
+$seafoam: #a0d6b4;
+
 $twitch-color: #A990DA;
 
 // Typography
