regions are no longer constants, moving them to their own table

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -59,6 +59,22 @@ a {
     font-family: 'Teko', sans-serif;
     font-weight: 400;
 }
+
+/* ----------------------------------------------------------------- */
+/* SIDENAV */
+/* ----------------------------------------------------------------- */
+.sidenav {
+    width: 260px;
+    height: 100%;
+    position: fixed;
+}
+
+/* ----------------------------------------------------------------- */
+/* MAIN CONTENT */
+/* ----------------------------------------------------------------- */
+.main-content {
+    margin-left: 260px;
+}
 /* ----------------------------------------------------------------- */
 /* FILTER */
 /* ----------------------------------------------------------------- */
